kubernetes/apps/default/planum/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: planum
  namespace: default
  labels:
    app.kubernetes.io/name: planum
spec:
  selector:
    app.kubernetes.io/name: planum
  ports:
    - name: http
      port: 4050
      targetPort: http
