kubernetes/apps/default/planum/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planum
  labels:
    app.kubernetes.io/name: planum
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - planum.iacob.uk
  rules:
    - backendRefs:
        - name: planum
          port: 4050
